docs: fix alignment of the checkmark in the “Copy code” button (#45316)
GitOrigin-RevId: 328e55b12332adfd422e88ec389304bba925bf27

--- a/npm-packages/docs/src/CopyButton.module.css
+++ b/npm-packages/docs/src/CopyButton.module.css
@@ -31,6 +31,7 @@
 
 .copyButtonIcons {
   position: relative;
+  display: inline-block;
   width: 1.125rem;
   height: 1.125rem;
 }
@@ -38,8 +39,8 @@
 .copyButtonIcon,
 .copyButtonSuccessIcon {
   position: absolute;
-  top: 0;
-  left: 0;
+  inset: 0;
+  margin: auto;
   fill: currentColor;
   opacity: inherit;
   width: inherit;
@@ -48,9 +49,7 @@
 }
 
 .copyButtonSuccessIcon {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0.33);
+  transform: scale(0.33);
   opacity: 0;
   color: #00d600;
 }
@@ -61,7 +60,7 @@
 }
 
 .copyButtonCopied .copyButtonSuccessIcon {
-  transform: translate(-50%, -50%) scale(1);
+  transform: scale(1);
   opacity: 1;
   transition-delay: 0.075s;
 }
